--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>datrat</groupId>
     <artifactId>engarrafar</artifactId>
-    <version>1.2.2</version>
+    <version>1.2.2a</version>
     <packaging>jar</packaging>
 
     <name>Engarrafar</name>
