--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,10 +3,15 @@ version: '${project.version}'
 main: datrat.engarrafar.EngarrafarMain
 api-version: 1.16
 authors: [ DatRat ]
-description: Canalize seu XP diretamente a garrafas de forma simples!
+description: Channelize your inner EXP directly into bottles in an easy way!
 website: https://github.com/DatRatVS
 
 commands:
   engarrafar:
     description: Canalize níveis de experiência diretamente a garrafas!
     usage: /engarrafar
+    permission: engarrafar.use
+  bottleup:
+    description: Channelize EXP levels directly into bottles!
+    usage: /bottleup
+    permission: engarrafar.use
